# predict-then-diffuse

./: README.md  ptd-analytical_simulation.ipynb  ptd_empirical_profiling_comparison.ipynb  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: predicted_lengths.csv  predicted_lengths_fixed.csv  predicted_lengths_with_fallback.csv
